fix:overflow

--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -100,7 +100,7 @@ height: 459px;
     .hero-text p{
         width: 300px;
         height: 100%;
-        margin-top:12rem;
+        margin-top:17rem;
     }
     .search{
         width: 375px;
