--- a/src/Components/Inspiration/inspiration.css
+++ b/src/Components/Inspiration/inspiration.css
@@ -84,7 +84,7 @@ color: #434343;
         padding:.9rem;
     }
     .night{
-        margin-left:0rem;
+        margin-left:.9rem;
         
     }
 
